[package]
name = "binartree"
version = "2.0.1"
authors = ["Paranid5 <dinaraparanid@gmail.com>"]
edition = "2018"
description = "Binary Tree realisation"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/binartree/2.0.1/binartree/index.html"
homepage = "https://github.com/dinaraparanid/Binary-Tree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
